--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -13,7 +13,6 @@ source:
 
 requirements:
   host:
-    - pip
     - python
     - beautifulsoup4
     - lxml
@@ -23,6 +22,9 @@ requirements:
     - certifi
   run:
     - python
+    - beautifulsoup4
+    - lxml
+    - urllib3
 
 test:
   imports:
