--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,6 +1,6 @@
 {% set git_user = "buck10" %}
 {% set git_name = "python-seo-analyzer" %}
-{% set version = "4.0.7.b" %}
+{% set version = "4.0.7.c" %}
 {% set name = "seoanalyzer" %}
 
 package:
